--- a/pom.xml
+++ b/pom.xml
@@ -5,67 +5,69 @@
   <packaging>jar</packaging>
   <version>1.4</version>
   <dependencies>
+	<!-- Run-time -->
   	<dependency>
   		<groupId>antlr</groupId>
   		<artifactId>antlr</artifactId>
   		<version>2.7.7</version>
-  		<type>jar</type>
-  		<scope>compile</scope>
   	</dependency>
   	<dependency>
   		<groupId>org.antlr</groupId>
   		<artifactId>stringtemplate</artifactId>
   		<version>3.2.1</version>
-  		<type>jar</type>
+  	</dependency>
+  	<dependency>
+  		<groupId>commons-lang</groupId>
+  		<artifactId>commons-lang</artifactId>
+  		<version>2.5</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>opensymphony</groupId>
+  		<artifactId>sitemesh</artifactId>
+  		<version>2.4.1</version>
   		<scope>compile</scope>
   	</dependency>
+	<!-- Build-time -->
   	<dependency>
   		<groupId>org.springframework</groupId>
   		<artifactId>spring-web</artifactId>
   		<version>3.0.3.RELEASE</version>
-  		<type>jar</type>
+  		<optional>true</optional>
   		<scope>compile</scope>
   	</dependency>
   	<dependency>
   		<groupId>org.springframework</groupId>
   		<artifactId>spring-webmvc</artifactId>
   		<version>3.0.3.RELEASE</version>
-  		<type>jar</type>
-  		<scope>compile</scope>
-  	</dependency>
-  	<dependency>
-  		<groupId>opensymphony</groupId>
-  		<artifactId>sitemesh</artifactId>
-  		<version>2.4.1</version>
-  		<type>jar</type>
+  		<optional>true</optional>
   		<scope>compile</scope>
   	</dependency>
   	<dependency>
   		<groupId>org.slf4j</groupId>
   		<artifactId>slf4j-api</artifactId>
   		<version>1.6.1</version>
-  		<type>jar</type>
+  		<optional>true</optional>
   		<scope>compile</scope>
   	</dependency>
   	<dependency>
   		<groupId>org.slf4j</groupId>
   		<artifactId>slf4j-simple</artifactId>
   		<version>1.6.1</version>
-  		<type>jar</type>
+  		<optional>true</optional>
   		<scope>compile</scope>
   	</dependency>
   	<dependency>
   		<groupId>junit</groupId>
   		<artifactId>junit</artifactId>
   		<version>4.8.2</version>
-  		<type>jar</type>
+  		<optional>true</optional>
   		<scope>test</scope>
   	</dependency>
   	<dependency>
   		<groupId>httpunit</groupId>
   		<artifactId>httpunit</artifactId>
   		<version>1.7</version>
-  		<type>jar</type>
+  		<optional>true</optional>
   		<scope>test</scope>
   		<exclusions>
   			<exclusion>
@@ -78,49 +80,42 @@
   		<groupId>org.mockito</groupId>
   		<artifactId>mockito-core</artifactId>
   		<version>1.8.5</version>
-  		<type>jar</type>
+  		<optional>true</optional>
   		<scope>test</scope>
   	</dependency>
   	<dependency>
   		<groupId>org.springframework</groupId>
   		<artifactId>spring-test</artifactId>
   		<version>3.0.3.RELEASE</version>
-  		<type>jar</type>
+  		<optional>true</optional>
   		<scope>test</scope>
   	</dependency>
   	<dependency>
   		<groupId>org.mortbay.jetty</groupId>
   		<artifactId>jetty</artifactId>
   		<version>6.1.15</version>
-  		<type>jar</type>
+  		<optional>true</optional>
   		<scope>test</scope>
   	</dependency>
   	<dependency>
   		<groupId>org.hamcrest</groupId>
   		<artifactId>hamcrest-all</artifactId>
   		<version>1.1</version>
-  		<type>jar</type>
+  		<optional>true</optional>
   		<scope>test</scope>
-  	</dependency>
-  	<dependency>
-  		<groupId>commons-lang</groupId>
-  		<artifactId>commons-lang</artifactId>
-  		<version>2.5</version>
-  		<type>jar</type>
-  		<scope>compile</scope>
   	</dependency>
   	<dependency>
   		<groupId>javax.servlet</groupId>
   		<artifactId>servlet-api</artifactId>
   		<version>2.5</version>
-  		<type>jar</type>
+  		<optional>true</optional>
   		<scope>compile</scope>
   	</dependency>
   	<dependency>
   		<groupId>rhino</groupId>
   		<artifactId>js</artifactId>
   		<version>1.6R5</version>
-  		<type>jar</type>
+  		<optional>true</optional>
   		<scope>test</scope>
   	</dependency>
   </dependencies>
